2003-08-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS: Updated news.
	* magick/blob.c (OpenBlob): Rewind file descriptor so that first
	read is at zero offset. This fixes reading GIFs via a
	user-provided file handle.

2003-08-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/image.c (GetImageDepth): Extend so that the actual
	minimum depth required to represent the image is
	returned. Previously only the values 8, 16, and 32 were
	returned. This means that a value of one is returned for a
	monochrome image. Also fixed a bug in that the pixels were
	incremented while the depth was incremented, resulting in the
	first image pixels not being properly evaluated for depth.
	(SetImageDepth): Extend to support converting the image to
	arbitrary modulus depths.
	(GetImageChannelDepth): New function to obtain the modulus depth
	for a specified image channel.

2003-08-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/draw.c (MvgAutoWrapPrintf): StreamError reported when
	DrawError was intended.
	* coders/logo.c (ReadLOGOImage): Report FileOpenError rather than
	BlobError if requested image does not exist.

2003-08-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/cache.c (PersistCache): If HAVE_SYSCONF and _SC_PAGE_SIZE
	are defined, then assume that sysconf works and don't use legacy
	getpagesize() function.
	* magick/studio.h (_XOPEN_SOURCE): Should be defined as 600 in
	order to match _POSIX_C_SOURCE=200112L according to the Single
	UNIX Specification v3.  This is necessary for the vsnprintf
	prototype to be visible.
	* magick/attribute.c (ReadByte): Fix compilation warnings due to
	casting 'unsigned char *' to 'char *' by changing function
	definition to accept 'unsigned char *' instead.
	* magick/error.h (UndefinedException): UndefinedException should
	be ExceptionType, not ExceptionBaseType.
	* magick/magick.c (IsValidFilesystemPath): Eliminate warning about
	unused function when UseInstalledMagick is defined.