@@ -56,6 +56,8 @@
 2003-08-14  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
+  <LI> magick/log.c (LogMagickEvent): Incorporated fix from Bill
+        Radcliffe to enable logging control flags to work properly again.
   <LI> NEWS: Updated news.
   <LI> magick/blob.c (OpenBlob): Rewind file descriptor so that first
         read is at zero offset. This fixes reading GIFs via a
